@@ -2,6 +2,7 @@ h1. CHANGELOG
 
 h2. 2.2.13 unreleased
 
+* add 'change roles' and 'delete user' features to admin app
 * improve 'views' recipes so Devise forms use SimpleForm when selected
 * improve 'railsapps' recipes to use 'quiet_assets'
 
